# MLOps_housing_pred

./: README.md  main.py  pyproject.toml
housing_prediction/: train.py
notebooks/: MLE_D1_LC1_California_Prediction.ipynb
