[project]
name = "mlops-housing-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
]
